# electricity_analytics

./: main.py  pyproject.toml
notebooks/: 01_entsoe_api_exploration.ipynb  01_entsoe_package.ipynb
