[project]
name = "electricity-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "entsoe-py>=0.7.8",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "matplotlib>=3.7.0",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
]
